# athena_gpu_embedding

./: .env.example  .gitignore  AGENTS.md  ALIGNMENT.md  PERFORMANCE_FIX.md  README.md  TODO.md  llm_concept_mapping.code-workspace  pyproject.toml
.claude/hooks/: session-start.sh
docker/: Dockerfile.aws
docs/: PERFORMANCE_FIX.md  adr_lance_store_proposal.md  adr_parquet_store_rejected.md  duckdb_concurrency.md
docs/runbooks/: aws_embedding_execution_plan.md  aws_interaction_guide.md  s3_to_snowflake_load.md
infra/aws/: README.md
infra/aws/envs/academic-dev/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/aws/envs/academic-prod/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/aws/modules/batch_gpu/: README.md  main.tf  outputs.tf  variables.tf
infra/aws/modules/security/: README.md  main.tf  outputs.tf  variables.tf
infra/aws/modules/storage/: README.md  main.tf  outputs.tf  variables.tf
scripts/: load_embeddings_to_snowflake.py
src/gpu_embedder/: __init__.py  cli.py  config.py  embed.py  ingest.py  logging_setup.py  models.py  report.py  store.py
src/gpu_embedder/aws/: __init__.py  artifacts.py  batch.py  config.py  orchestrate.py  s3.py  sharding.py
tests/: conftest.py
tests/fixtures/: CONCEPT_mini.tsv
tests/unit/: test_aws.py  test_cli.py  test_config.py  test_embed.py  test_ingest.py  test_logging_setup.py  test_report.py  test_store.py  test_store_lance.py
