[project]
name = "gpu-embedder"
version = "0.1.0"
description = "Batch-embed OHDSI Athena CONCEPT.csv files with SapBERT (FP32, GPU) into DuckDB"
requires-python = ">=3.12,<3.15"
dependencies = [
    "duckdb>=1.1",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "transformers>=4.44",
    "torch>=2.3",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Optional AWS execution path (S3 + AWS Batch). Not needed for local embedding.
aws = ["boto3>=1.34"]

[project.scripts]
gpu-embed = "gpu_embedder.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_embedder"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=gpu_embedder --cov-report=term-missing"
markers = ["gpu: requires a CUDA GPU (auto-skipped when unavailable)"]

[tool.coverage.run]
source = ["gpu_embedder"]
omit = ["src/gpu_embedder/cli.py"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# Route torch to the CUDA 13.0 index on Linux and Windows.
# macOS has no CUDA builds; it resolves from PyPI (CPU/MPS).
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
