[project]
name = "gpu-embedder"
version = "0.1.0"
description = "Batch-embed OHDSI Athena CONCEPT.csv files with SapBERT (FP32, GPU) into a Lance store"
requires-python = ">=3.12,<3.15"
dependencies = [
    "duckdb>=1.1",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "transformers>=4.44",
    "torch>=2.3",
    "tqdm>=4.66",
    "numpy>=1.26",
    "pyarrow>=16",
    # Lance is the default store backend, so pylance is a base dependency.
    "pylance>=7.0",
]

[project.optional-dependencies]
# Torch build selection — choose exactly one backend when syncing:
#   uv sync --extra gpu   CUDA 13.0 on Linux/Windows (CPU/MPS wheels on macOS)
#   uv sync --extra cpu   CPU-only wheels — the right choice for running the
#                         tests, which mock the model and never need a GPU.
# torch is also listed in [project.dependencies]; these extras only route which
# index it is resolved from (see [tool.uv.sources]).
# NOTE: the cpu/gpu indexes live on download.pytorch.org. In sandboxes that block
# it (e.g. Claude Code on the web), install a CPU torch from PyPI instead — see
# the README's "Testing without a GPU" section / .claude/hooks/session-start.sh.
cpu = ["torch>=2.3"]
gpu = ["torch>=2.3"]

[project.scripts]
gpu-embed = "gpu_embedder.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_embedder"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=gpu_embedder --cov-report=term-missing"
markers = ["gpu: requires a CUDA GPU (auto-skipped when unavailable)"]

[tool.coverage.run]
source = ["gpu_embedder"]
omit = ["src/gpu_embedder/cli.py"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# Torch is routed to an index by the chosen extra (cpu vs gpu), which are
# mutually exclusive. macOS has no CUDA builds, so the gpu extra resolves torch
# from PyPI (CPU/MPS) there via the marker below.
[tool.uv]
conflicts = [
  [{ extra = "cpu" }, { extra = "gpu" }],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
